--- a/src/app/pages/report-student/report-student.component.html
+++ b/src/app/pages/report-student/report-student.component.html
@@ -1,11 +1,33 @@
 <co-recoverdatalayout [extend]="true" label="Informacion Estudiante">
     <div view class="p-4">
         <ng-container *ngIf="studentInfo">
-            <h2>{{studentInfo.fullname}}</h2>
-            <div>{{studentInfo.careerName}}</div>
-            <div style="display: flex;">
+            <div style="display: grid; grid-template-columns: 400px auto; gap: 1rem;">
+                <div>
+                    <co-card class="shadow-1">
+                        <div class="text-center mb-6">
+                            <div style="font-size: 1.2rem; font-weight: lighter;">{{studentInfo.fullname}}</div>
+                            <b>{{studentInfo.careerName}}</b>
+                        </div>
+                        
+                        <p-chart type="doughnut" [data]="data"></p-chart>
+                        <div class="mt-4">
+                            <table style="width: 100%;">
+                                <tr>
+                                    <th class="text-left">INDICADOR</th>
+                                    <th>CANTIDAD</th>
+                                    <th>PORCENTAJE</th>
+                                </tr>
+                                <tr *ngFor="let indicator of dataset2">
+                                    <td><span [style]="{color: indicator.color}">{{indicator.statusName}}</span></td>
+                                    <td class="text-center">{{indicator.total}}</td>
+                                    <td class="text-center">{{indicator.percent}}%</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </co-card>
+                </div>
                 <co-card *ngIf="answerStudent.length" class="shadow-1">
-                    <table>
+                    <table style="width: 100%;">
                         <thead>
                             <tr>
                                 <th>#</th>
@@ -33,8 +55,6 @@
                     </table>
                 </co-card>
             </div>
-            
-            
         </ng-container>
     </div>
     <div action>
