--- a/src/app/pages/report-student/report-student.component.html
+++ b/src/app/pages/report-student/report-student.component.html
@@ -1,7 +1,7 @@
 <co-recoverdatalayout [extend]="true" label="Informacion Estudiante">
-    <div view class="p-4">
+    <div view class="p-3">
         <ng-container *ngIf="studentInfo">
-            <div style="display: grid; grid-template-columns: 400px auto; gap: 1rem;">
+            <section>
                 <div>
                     <co-card class="shadow-1">
                         <div class="text-center mb-6">
@@ -54,7 +54,7 @@
                         </tfoot>
                     </table>
                 </co-card>
-            </div>
+            </section>
         </ng-container>
     </div>
     <div action>
