--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -11,19 +11,21 @@
             <img src="/assets/indicators.png" alt="" srcset="" style="max-height: 250px;">
         </div>
     </div>
-    <div view style="height: 100%; width: 100%; overflow-y: auto;">
-        <div class="p-4" *ngIf="careerSelected != null">
-            <div class="mb-4" style="display: flex; align-items: center; justify-content: space-between; gap: 1rem;">
+    <div view style="height: 100%; width: 100%; overflow-y: auto;" class="mt-6">
+        <div class="p-3" *ngIf="careerSelected != null">
+            <div class="mb-3 career-selecter">
+              
+                <select [(ngModel)]="careerSelected" (change)="selectChange()" >
+                    <option value="" disabled>Seleccione una carrera</option>
+                    <option *ngFor="let career of careerStudentsInfo" [ngValue]="career">{{career.careerName}}</option>
+                </select>
+            
                 <div style="display: flex; align-items: center; gap: 1rem;">
-                    <p-dropdown [options]="careerStudentsInfo" optionLabel="careerName" [(ngModel)]="careerSelected"
-                        placeholder="Seleccione una carrera" (onChange)="selectChange()" [style]="{width: '400px'}">
-                    </p-dropdown>
+                    <button pButton (click)="careerSelected = null">Atras</button>
                     <p-button *ngIf="studentDataList.length" (onClick)="generateExcelFile()"
                         [style]="{background: 'var(--cyan-600)'}">
                         Exportar selección a Excel</p-button>
                 </div>
-                <button pButton type="button" icon="pi pi-times" class="p-button-text p-button-rounded"
-                    (click)="careerSelected = null"></button>
             </div>
             <p-table [value]="studentDataList" [rows]="10" [showCurrentPageReport]="true">
                 <ng-template pTemplate="header">
@@ -34,7 +36,7 @@
                         </th>
                         <th pSortableColumn="fullname">Nombres<p-sortIcon field="fullname"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="group">Grupo<p-sortIcon field="career"></p-sortIcon>
+                        <th pSortableColumn="group">Grupo<p-sortIcon field="group"></p-sortIcon>
                         </th>
                         <th pSortableColumn="modality">Modalidad<p-sortIcon field="modality"></p-sortIcon>
                         </th>
@@ -42,7 +44,7 @@
                         </th>
                         <th pSortableColumn="score">Puntaje<p-sortIcon field="score"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="career">Calificación<p-sortIcon field="career"></p-sortIcon>
+                        <th pSortableColumn="calification">Calificación<p-sortIcon field="calification"></p-sortIcon>
                         <th pSortableColumn="merith">Merito<p-sortIcon field="merith"></p-sortIcon>
 
                         </th>
@@ -66,68 +68,80 @@
                 </ng-template>
             </p-table>
         </div>
-        <div *ngIf="careerSelected == null" id="general-view" class="mt-6">
-            <div style="display: grid; gap: 1rem;">
-                <div style="display: flex; gap: .5rem; align-items: center; justify-content: space-between;">
-                    <h2>Resultados por carrera</h2>
-                    <button (click)="generateExcelFileAll()" pButton class="p-button-sm">Exportar a Excel</button>
-                </div>
-                <div id="careerListContainer" *ngIf="careerStudentsInfo.length > 0">
-                    <co-card class="careerItemInfo shadow-1 p-5" *ngFor="let item of careerStudentsInfo">
-                        <div>
-                            <div>{{item.careerName}}</div>
-                            <div class="mt-3">{{item.totalStundents}} Estudiantes</div>
-                        </div>
-                        <div style="display: flex; gap: .5rem;">
-                            <button pButton type="button" icon="pi pi-list" class="p-button-rounded p-button-outlined p-button-info"
-                                (click)="selectCareer(item)"></button>
-                            <button pButton type="button" icon="pi pi-file-excel"
-                                class="p-button-rounded p-button-outlined p-button-success"
-                                (click)="prepareExcelPerCareer(item)"></button>
-                
-                        </div>
-                        <div class="mt-4"
-                            style="overflow: hidden; background: lightgray; border-radius: .5rem; height: 3px; display: flex; width: 100%;">
-                
-                            <div style="background: var(--primary-color); height: 100%"
-                                [style]="{width: percentCalcule(item.asistence, item.totalStundents)}"></div>
-                            <div style="background: transparent; height: 100%"
-                                [style]="{width: percentCalcule(item.totalStundents - item.asistence, item.totalStundents)}"></div>
-                        </div>
-                    </co-card>
-                </div>
+        <div *ngIf="careerSelected == null" class="mt-3">
+            <div style="display: flex; gap: .5rem; align-items: center; justify-content: space-between;" class="d-flex m-3">
+                <h2>Resultados por carrera</h2>
+                <button (click)="generateExcelFileAll()" pButton class="p-button-sm">Exportar a Excel</button>
             </div>
-            <div style="margin-top: calc(1rem + 35px); display: grid; gap: 1rem;">
-                <co-card class="shadow-1" style="display: grid; gap: 1rem;">
-                    <div class="p-input-icon-left" style="width: 100%;">
-                        <i class="pi pi-search"></i>
-                        <input type="text" pInputText placeholder="Search" [(ngModel)]="searchStudent" (input)="initSearch()" style="width: 100%;">
-                    </div>
-                    <div class="text-center">
-                        <table *ngIf="searchStudentList.length > 0" style="text-align: left; width: 100%;">
-                            <tr *ngFor="let item of searchStudentList">
-                                <td>{{item.career}}</td>
-                                <td>
-                                    <button [routerLink]="['/infostudent/project/' + item.code]" pButton class="p-button-text" [innerHTML]="resaltText(item.fullname, searchStudent)"></button>
-                                </td>
-                            </tr>
-                        </table>
-                        <div *ngIf="searchStudentList.length == 0">
-                            SIN REGISTROS O BUSQUEDA NO INICIALIZADA
+            <div id="general-view">
+                <div style="display: grid; gap: 1rem;">
+                    <div>
+                        <co-card class="shadow-1 mb-3" style="display: grid; gap: 1rem;">
+                            <div class="p-input-icon-left" style="width: 100%;">
+                                <i class="pi pi-search"></i>
+                                <input type="text" pInputText placeholder="Search" [(ngModel)]="searchStudent"
+                                    (input)="initSearch()" style="width: 100%;">
+                            </div>
+                            <div class="text-center">
+                                <table *ngIf="searchStudentList.length > 0" style="text-align: left; width: 100%;">
+                                    <tr *ngFor="let item of searchStudentList">
+                                        <td>{{item.career}}</td>
+                                        <td>
+                                            <button [routerLink]="['/infostudent/project/' + item.code]" pButton
+                                                class="p-button-text"
+                                                [innerHTML]="resaltText(item.fullname, searchStudent)"></button>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <div *ngIf="searchStudentList.length == 0">
+                                    SIN REGISTROS O BUSQUEDA NO INICIALIZADA
+                                </div>
+                            </div>
+                        </co-card>
+                        <div id="careerListContainer" *ngIf="careerStudentsInfo.length > 0">
+                            <co-card class="careerItemInfo shadow-1 p-5" *ngFor="let item of careerStudentsInfo">
+                                <div>
+                                    <div>{{item.careerName}}</div>
+                                    <div class="mt-3">{{item.totalStundents}} Estudiantes</div>
+                                </div>
+                                <div style="display: flex; gap: .5rem;">
+                                    <button pButton type="button" icon="pi pi-list"
+                                        class="p-button-rounded p-button-outlined p-button-info"
+                                        (click)="selectCareer(item)"></button>
+                                    <button pButton type="button" icon="pi pi-file-excel"
+                                        class="p-button-rounded p-button-outlined p-button-success"
+                                        (click)="prepareExcelPerCareer(item)"></button>
+            
+                                </div>
+                                <div class="mt-4"
+                                    style="overflow: hidden; background: lightgray; border-radius: .5rem; height: 3px; display: flex; width: 100%;">
+            
+                                    <div style="background: var(--primary-color); height: 100%"
+                                        [style]="{width: percentCalcule(item.asistence, item.totalStundents)}"></div>
+                                    <div style="background: transparent; height: 100%"
+                                        [style]="{width: percentCalcule(item.totalStundents - item.asistence, item.totalStundents)}">
+                                    </div>
+                                </div>
+                            </co-card>
                         </div>
                     </div>
-                </co-card>
-                <co-card class="shadow-1">
-                    <div class="mb-4">
-                        <h3>Total postulantes por carrera: {{studentInfoList.length}}</h3>
+                </div>
+                <div>
+                    <div style="display: grid; gap: 1rem;">
+            
+                        <co-card class="shadow-1">
+                            <div class="mb-4">
+                                <h3>Total postulantes por carrera: {{studentInfoList.length}}</h3>
+                            </div>
+                            <div style="display: grid; grid-template-columns: 1fr;">
+                                <p-chart type="bar" [data]="data"></p-chart>
+                                <!--<p-chart type="doughnut" [data]="data"></p-chart>-->
+                            </div>
+            
+                        </co-card>
+                        <co-modality-list></co-modality-list>
                     </div>
-                    <div style="display: grid; grid-template-columns: 1fr;">
-                        <p-chart type="bar" [data]="data"></p-chart>
-                        <!--<p-chart type="doughnut" [data]="data"></p-chart>-->
-                    </div>
-                
-                </co-card>
-                <co-modality-list></co-modality-list>
+                </div>
             </div>
         </div>
     </div>
