--- a/src/app/pages/report/report.component.scss
+++ b/src/app/pages/report/report.component.scss
@@ -5,6 +5,10 @@
     background-color: var(--primary-color);
     color: white;
 }
+.career-selecter{
+    display: flex; align-items: center; justify-content: space-between; gap: 1rem;
+    position: relative;
+}
 #general-view{
     padding: 1rem;
     display: grid;
@@ -26,3 +30,16 @@
     align-items: center;
     text-align: center;
 }
+select{
+    width: 100%;
+    max-width: 400px;
+ }
+@media screen and (max-width: 600px){
+    #general-view{
+        grid-template-columns: 1fr;
+    }
+    .career-selecter{
+        display: grid;
+    }
+}
+    
