--- a/src/app/pages/step3/step3.component.html
+++ b/src/app/pages/step3/step3.component.html
@@ -62,7 +62,7 @@
                         </tbody>
                     </table>
                 </co-card>
-                <co-card *ngIf="dataLost.length" class="shadow-1">
+                <co-card *ngIf="repeatedCode.length" class="shadow-1">
                     <div class="mb-4">
                         <h3>Identificadores duplicados</h3>
                         Los siguientes Identificadores estan asociados a un mismo alumno.
