add offline mode

--- a/src/app/pages/start/start.component.html
+++ b/src/app/pages/start/start.component.html
@@ -2,7 +2,7 @@
     <div view class="p-4">
         <co-card class="mb-4" style="background-color: #263238;">
             <h3 class="mb-4" style="color: white;">Contenido del archivo</h3>
-            <ngx-codemirror [(ngModel)]="file" [options]="{
+            <ngx-codemirror [ngModel]="file" [options]="{
                         lineNumbers: true,
                         theme: 'material',
                         mode: 'javascript',
