--- a/src/app/pages/loadproject/loadproject.component.html
+++ b/src/app/pages/loadproject/loadproject.component.html
@@ -1,12 +1,15 @@
 <section>
     <div class="project-content">
-        <div class="label-project mb-4" style="display: flex; align-items: center; justify-content: space-between;">
-            <span class="mr-4">Proyectos de calificación</span>
-            <button pButton (click)="forceLoadProjects()">Actualizar</button>
+        <div style="display: flex; gap: .5rem; justify-content: flex-end;" class="pb-4">
+            <button pButton class="p-button-text" icon="pi pi-plus" (click)="newProject()" label="Nuevo"></button>
+            <button pButton class="p-button-text" icon="pi pi-cloud-download" (click)="forceLoadProjects()" label="Recargar" *ngIf="!isModeOffLine"></button>
+            <button pButton class="p-button-text" icon="pi pi-wifi" (click)="changeMode()" [label]="isModeOffLine ? 'Offline': 'Online'"></button>
         </div>
-        <co-card class="shadow-1 item-project-button" style="height: 60px;" (click)="newProject()">
-            <i class="pi pi-plus"></i><span>Crear nuevo proyecto</span>
-        </co-card>
+        <div *ngIf="projects.length == 0">
+            <co-card class="text-center py-6 px-3">
+                <i>AUN NO EXISTEN PROYECTOS</i>
+            </co-card>
+        </div>
         <div *ngFor="let item of projects" class="item-project">
             <co-card class="shadow-1 item-project-button item-project-button-selectable" (click)="setProject(item)"
                 [style]="{'border-color': listColor[item.unidad]}">
@@ -24,7 +27,7 @@
     (visibleChange)="onNew = 0" [modal]="true" [style]="{width: '90%', 'max-width': '800px'}">
     <div class="py-2" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
         <div class="f-c">
-            <img src="/assets/table.png" alt="edit file" style="max-height: 160px;">
+            <img [src]="isModeOffLine ? '/assets/offline.png': '/assets/table.png'" alt="edit file" style="max-height: 160px;">
         </div>
         <div>
             <div class="p-float-label">
