--- a/src/app/pages/step4/step4.component.html
+++ b/src/app/pages/step4/step4.component.html
@@ -80,7 +80,7 @@
         </label>
 
         <div style="display: flex; justify-content: center;">
-            <p-button styleClass="mt-3 p-button-secondary" routerLink="/step3">Retroceder</p-button>
+            <p-button styleClass="mt-3 p-button-secondary" routerLink="/loadkeys">Retroceder</p-button>
             <co-box></co-box>
             <p-button styleClass="mt-3 p-button-secondary" (onClick)="validate()">REPORTE</p-button>
         </div>
