--- a/src/app/pages/loadproject/loadproject.component.scss
+++ b/src/app/pages/loadproject/loadproject.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
 }
@@ -46,13 +47,32 @@ img{
 .item-project:hover button.b-edit{
     display: block;
 }
+.title-app{
+    font-size: 1.5rem;
+    font-weight: lighter;
+    width: 100%;
+    padding: 1rem;
+    text-align: right;
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+}
+.title-app b{
+    font-size: 1rem;
+}
 @media screen and (max-width: 600px){
+    .title-app{
+        position: relative;
+        text-align: center;
+        font-size: 1.2rem;
+    }
     :host{
         justify-content: flex-start;
         height: auto;
     }
     section{
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     img{
         height: 200px;
