--- a/src/app/pages/report/report.component.html
+++ b/src/app/pages/report/report.component.html
@@ -2,10 +2,10 @@
     
     <div action style="height: 100%; display: flex; flex-direction: column; justify-content: space-between;">
         <div style="display: grid; gap: .5rem; grid-template-columns: repeat(2, 1fr);">
-            <div class="p-3 shadow-1 link f-c" routerLink="/loadkeys">Cargar Clave</div>
             <div class="p-3 shadow-1 link f-c" routerLink="/loadstudents">Cargar Alumnos</div>
-            <div class="p-3 shadow-1 link f-c" routerLink="/step3">Cargar Asistencia</div>
-            <div class="p-3 shadow-1 link f-c" routerLink="/step4">Cargar Respuestas</div>
+            <div class="p-3 shadow-1 link f-c" routerLink="/loadkeys">Cargar Clave</div>
+            <div class="p-3 shadow-1 link f-c" routerLink="/LoadIdentifiers">Cargar Asistencia</div>
+            <div class="p-3 shadow-1 link f-c" routerLink="/loadAnswers">Cargar Respuestas</div>
         </div>
         <div class="pb-4" style="flex: 1; display: flex; align-items: flex-end; width: 100%; justify-content: center;">
             <img src="/assets/indicators.png" alt="" srcset="" style="max-height: 250px;">
